--- a/index.html
+++ b/index.html
@@ -4,10 +4,15 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
   <link rel="stylesheet" href="index.css">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
+<!-- start of favicon -->
+<link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32" />
+<link rel="icon" type="image/png" href="favicon-16x16.png" sizes="16x16" />
+<!-- end of favicon -->
 </head>
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
+<title> SOUP </title>
 <!-- <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button> -->
 <div class="navigationbar">
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -55,8 +60,8 @@
       </li>
     </ul>
     <div class="icons"> <a class="fas fa-envelope" href="mailto:helpsoup@gmail.com?Subject=%20" target="_top"></a> </div>
-    <div class="icons"> <a class="fab fa-instagram" href="https://www.instagram.com/soupincorporated/" target="_top"></a> </div>
-    <div class="icons"> <a class="fab fa-twitter" href="https://twitter.com/soupincorporat1" target="_top"></a> </div>
+    <div class="icons"> <a class="fab fa-instagram" href="https://www.instagram.com/soupincorporated/" target= "_blank"></a> </div>
+    <div class="icons"> <a class="fab fa-twitter" href="https://twitter.com/soupincorporat1" target= "_blank"></a> </div>
   </div>
 </nav>
 
