--- a/event.html
+++ b/event.html
@@ -2,6 +2,7 @@
 <html>
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 <link rel="stylesheet" href="index.css">
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
 <head>
 </head>
 <body>
@@ -50,6 +51,9 @@
         <a class="nav-link disabled" href="contact.html"style="color:#e8f9f9">Contact</a>
       </li>
     </ul>
+    <div class="icons"> <a class="fas fa-envelope" href="mailto:helpsoup@gmail.com?Subject=%20" style="color:#5c6377"target="_top"></a> </div>
+    <div class="icons"> <a class="fab fa-instagram" href="https://www.instagram.com/soupincorporated/"style="color:#5c6377" target="_top"></a> </div>
+    <div class="icons"> <a class="fab fa-twitter" href="https://twitter.com/soupincorporat1" style="color:#5c6377" target="_top"></a> </div>
   </div>
 </nav>
 <div>
@@ -59,7 +63,7 @@
 </div>
 <p>
 <div id="sizeText">
-<h1>This is our events page.</h1>
+<center><h1>Event</h1></center>
 </div>
 </p>
 <div="calendar">
