--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
+  <title> SOUP Inc. </title>
 <!-- <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button> -->
 <div class="navigationbar">
 <nav class="navbar navbar-expand-lg navbar-secondary bg-secondary">
@@ -65,7 +66,7 @@
 
   <!-- Header -->
   <div class="header" id="myHeader">
-    <h1>SOUP Inc.</h1>
+    <h1><img src="header4.gif"></h1>
     <p> Serve Others, Unite People </p>
   </div>
 
