--- a/map.html
+++ b/map.html
@@ -2,9 +2,10 @@
 <html>
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 <script src="func.js"></script>
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
 <link rel="stylesheet" href="index.css">
 <head>
-<title>Leaflet Web Map</title>
+<title>Map</title>
 <link rel="stylesheet" href="map-style.css" />
 <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.css" />
 
@@ -58,6 +59,9 @@
           <a class="nav-link disabled" href="contact.html"style="color:#e8f9f9">Contact</a>
         </li>
       </ul>
+      <div class="icons"> <a class="fas fa-envelope" href="mailto:helpsoup@gmail.com?Subject=%20" style="color:#5c6377"target="_top"></a> </div>
+      <div class="icons"> <a class="fab fa-instagram" href="https://www.instagram.com/soupincorporated/"style="color:#5c6377" target="_top"></a> </div>
+      <div class="icons"> <a class="fab fa-twitter" href="https://twitter.com/soupincorporat1" style="color:#5c6377" target="_top"></a> </div>
     </div>
   </nav>
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
