--- a/organizationPage.html
+++ b/organizationPage.html
@@ -3,10 +3,12 @@
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 <!-- <script src="func.js"></script> -->
 <link rel="stylesheet" href="index.css">
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
 <head>
 </head>
 <body>
 <div>
+  <title> Organizations </title>
 <nav class="navbar navbar-expand-lg navbar-secondary bg-secondary">
   <a class="navbar-brand"> <img id="logo" src="logo.png"></a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -52,6 +54,9 @@
         <a class="nav-link disabled" href="contact.html"style="color:#e8f9f9">Contact</a>
       </li>
     </ul>
+    <div class="icons"> <a class="fas fa-envelope" href="mailto:helpsoup@gmail.com?Subject=%20" style="color:#5c6377"target="_top"></a> </div>
+    <div class="icons"> <a class="fab fa-instagram" href="https://www.instagram.com/soupincorporated/"style="color:#5c6377" target="_top"></a> </div>
+    <div class="icons"> <a class="fab fa-twitter" href="https://twitter.com/soupincorporat1" style="color:#5c6377" target="_top"></a> </div>
   </div>
 </nav>
 </div>
