--- a/peerLead.html
+++ b/peerLead.html
@@ -2,10 +2,12 @@
 <html>
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 <link rel="stylesheet" href="index.css">
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
 <head>
 </head>
 <body>
 <div>
+<title> Peer Leadership </title>
 <nav class="navbar navbar-expand-lg navbar-secondary bg-secondary">
   <a class="navbar-brand"> <img id="logo" src="logo.png"></a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -50,6 +52,9 @@
         <a class="nav-link disabled" href="contact.html"style="color:#e8f9f9">Contact</a>
       </li>
     </ul>
+    <div class="icons"> <a class="fas fa-envelope" href="mailto:helpsoup@gmail.com?Subject=%20" style="color:#5c6377"target="_top"></a> </div>
+    <div class="icons"> <a class="fab fa-instagram" href="https://www.instagram.com/soupincorporated/"style="color:#5c6377" target="_top"></a> </div>
+    <div class="icons"> <a class="fab fa-twitter" href="https://twitter.com/soupincorporat1" style="color:#5c6377" target="_top"></a> </div>
   </div>
 </nav>
 </div>
@@ -60,7 +65,7 @@
 </div>
 <p>
 <div id="sizeText">
-<h1>This is our Peer Leadership page.</h1>
+<h1>Peer Leadership</h1>
 Peer Leadership is an organization that empowers students to help out in their communities.
 Peer Leadership isn’t just a club to participate in, but it is a life experience that shows you and makes you appreciate everything that life gives you. Peer Leadership allows students to do some good and at the same time have fun with friends. It shows that as students we have great character and will lend a hand to someone in need. Peer Leadership started small, but now is nationwide in helping people and getting students involved.
 
